test/tests/stages/18_structures/invalid_parse/struct_member_no_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
